--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -23,7 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
                         <subviews>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gT6-92-Go5">
-                                <rect key="frame" x="8" y="18" width="359" height="50"/>
+                                <rect key="frame" x="8" y="18" width="359" height="66"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nax-I1-dp4" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="8" y="10" width="30" height="30"/>
@@ -89,6 +89,25 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontSuezOne" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You'll not receive notification in Shadow Mode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j4f-gS-nOe" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="8" y="46" width="343" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="343" id="R9o-Oe-1BS"/>
+                                            <constraint firstAttribute="height" constant="20" id="aUI-df-Kfz"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="txtColor">
+                                                <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
+                                                <real key="value" value="12"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WHO VIEWED MY PROFILE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2n-8t-cBj" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="46" y="9" width="267" height="32"/>
                                         <constraints>
@@ -124,19 +143,22 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="nax-I1-dp4" secondAttribute="bottom" constant="10" id="1ob-jd-3Jt"/>
+                                    <constraint firstAttribute="bottom" secondItem="nax-I1-dp4" secondAttribute="bottom" constant="26" id="1ob-jd-3Jt"/>
                                     <constraint firstItem="nax-I1-dp4" firstAttribute="leading" secondItem="gT6-92-Go5" secondAttribute="leading" constant="8" id="5Et-yY-ins"/>
                                     <constraint firstItem="ooM-Y7-C6j" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="7ll-so-wwE"/>
                                     <constraint firstItem="6BT-Eq-hcD" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="8iu-h4-V23"/>
                                     <constraint firstItem="v2n-8t-cBj" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="Ffm-5O-FnH"/>
-                                    <constraint firstAttribute="bottom" secondItem="RN4-MZ-r6J" secondAttribute="bottom" constant="10" id="If6-t7-aPr"/>
-                                    <constraint firstItem="v2n-8t-cBj" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="M1t-BG-i4Q"/>
-                                    <constraint firstItem="ooM-Y7-C6j" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="Qv8-S1-Vjd"/>
+                                    <constraint firstItem="j4f-gS-nOe" firstAttribute="leading" secondItem="gT6-92-Go5" secondAttribute="leading" constant="8" id="Gaj-1s-zSc"/>
+                                    <constraint firstAttribute="bottom" secondItem="RN4-MZ-r6J" secondAttribute="bottom" constant="26" id="If6-t7-aPr"/>
+                                    <constraint firstItem="v2n-8t-cBj" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" constant="-8" id="M1t-BG-i4Q"/>
+                                    <constraint firstItem="ooM-Y7-C6j" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" constant="-8" id="Qv8-S1-Vjd"/>
                                     <constraint firstItem="RN4-MZ-r6J" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="top" constant="10" id="Yvg-yi-xet"/>
-                                    <constraint firstAttribute="height" constant="50" id="e3g-tr-5EW"/>
+                                    <constraint firstAttribute="height" constant="66" id="e3g-tr-5EW"/>
                                     <constraint firstAttribute="trailing" secondItem="RN4-MZ-r6J" secondAttribute="trailing" constant="8" id="mXb-4x-ojj"/>
-                                    <constraint firstItem="6BT-Eq-hcD" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="rZO-Fu-qxj"/>
+                                    <constraint firstItem="j4f-gS-nOe" firstAttribute="top" secondItem="6BT-Eq-hcD" secondAttribute="bottom" constant="5" id="qyU-WZ-RNo"/>
+                                    <constraint firstItem="6BT-Eq-hcD" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" constant="-8" id="rZO-Fu-qxj"/>
                                     <constraint firstAttribute="width" constant="359" id="z8u-yt-aX4"/>
+                                    <constraint firstAttribute="trailing" secondItem="j4f-gS-nOe" secondAttribute="trailing" constant="8" id="zet-Kk-xgf"/>
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FtL-JB-NbO">
@@ -540,7 +562,7 @@
                             <constraint firstItem="FtL-JB-NbO" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="L4r-Dh-ihL"/>
                             <constraint firstItem="FtL-JB-NbO" firstAttribute="top" secondItem="yxB-RW-UxQ" secondAttribute="top" constant="18" id="Mbj-T5-06I"/>
                             <constraint firstItem="gT6-92-Go5" firstAttribute="top" secondItem="yxB-RW-UxQ" secondAttribute="top" constant="18" id="QcG-rH-kH6"/>
-                            <constraint firstItem="cn8-Nl-EBJ" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="bottom" constant="8" symbolic="YES" id="Xvo-jV-E73"/>
+                            <constraint firstItem="cn8-Nl-EBJ" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="bottom" constant="-8" id="Xvo-jV-E73"/>
                             <constraint firstAttribute="bottom" secondItem="cn8-Nl-EBJ" secondAttribute="bottom" constant="9" id="ewF-y0-tXB"/>
                             <constraint firstItem="cn8-Nl-EBJ" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="mRZ-h1-rQx"/>
                             <constraint firstAttribute="trailing" secondItem="cn8-Nl-EBJ" secondAttribute="trailing" constant="8" id="s9q-62-hn7"/>
@@ -577,6 +599,7 @@
                 <outlet property="searchTF" destination="Xet-Wr-pR1" id="m59-jb-5gp"/>
                 <outlet property="searchTFView" destination="sja-AP-Tc4" id="ELW-Ro-pSa"/>
                 <outlet property="searchView" destination="TDA-ZG-dfd" id="ihD-JV-emC"/>
+                <outlet property="shadowLbl" destination="j4f-gS-nOe" id="uns-3c-Q2T"/>
                 <outlet property="swipeTxtLbl" destination="A8B-bt-df2" id="plB-4W-MEu"/>
                 <outlet property="toolTipBtn" destination="dX8-SZ-fyC" id="alY-DK-CNl"/>
                 <outlet property="viewCountsLbl" destination="pXu-df-J1k" id="YjA-1D-4FB"/>
@@ -623,6 +646,9 @@
         </designable>
         <designable name="dpP-cf-H6r">
             <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
+        </designable>
+        <designable name="j4f-gS-nOe">
+            <size key="intrinsicContentSize" width="349" height="20.333333333333332"/>
         </designable>
         <designable name="nax-I1-dp4">
             <size key="intrinsicContentSize" width="162" height="152"/>
