--- a/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="MixHeaderTVCell" customModule="Kismmat" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="MixHeaderTVCell" customModule="Kismmet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -33,7 +33,7 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rtt-Zr-LA8">
                                 <rect key="frame" x="17.666666666666657" y="6.6666666666666679" width="340" height="31.000000000000004"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile Visibility" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLp-rH-ZeA" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile Visibility" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLp-rH-ZeA" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="8" y="4" width="110" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="37i-xG-rz5"/>
@@ -53,7 +53,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Zd-77-ahs" customClass="RoundCornerButton" customModule="Kismmat" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Zd-77-ahs" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="117.99999999999999" y="7" width="15.000000000000014" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="15" id="WrI-3q-KSO"/>
@@ -71,8 +71,8 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </button>
-                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rgH-vW-BiW" customClass="CustomToggleButton" customModule="Kismmat" customModuleProvider="target">
-                                        <rect key="frame" x="283" y="0.0" width="51" height="31"/>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rgH-vW-BiW" customClass="CustomToggleButton" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="295.75" y="7.75" width="27.5" height="15.5"/>
                                         <color key="onTintColor" name="Secondary Grey"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="scale">
@@ -102,7 +102,7 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8lF-4I-lbp">
                                 <rect key="frame" x="17.666666666666657" y="0.0" width="340" height="44"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3PY-qB-7mJ" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3PY-qB-7mJ" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="8" y="-3" width="324" height="47"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="324" id="Bec-BK-o2s"/>
@@ -134,7 +134,7 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ObE-7r-VTI">
                                 <rect key="frame" x="18" y="7" width="340" height="30"/>
                                 <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cx2-Bl-JDe" customClass="RoundCornerButton" customModule="Kismmat" customModuleProvider="target">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cx2-Bl-JDe" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="309" y="4" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="1bM-Cw-YlX"/>
@@ -155,11 +155,11 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ir-Q9-gZ4" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
-                                        <rect key="frame" x="8" y="0.0" width="200" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ir-Q9-gZ4" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="8" y="0.0" width="230" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="jOa-c0-0D7"/>
-                                            <constraint firstAttribute="width" constant="200" id="k0C-xC-bva"/>
+                                            <constraint firstAttribute="width" constant="230" id="k0C-xC-bva"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -175,7 +175,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500 m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3c-Ag-h76" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500 m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3c-Ag-h76" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="216" y="4" width="116" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="116" id="pKp-js-xTL"/>
@@ -200,14 +200,14 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="96M-LM-EMM"/>
                                     <constraint firstItem="v3c-Ag-h76" firstAttribute="top" secondItem="ObE-7r-VTI" secondAttribute="top" constant="4" id="Abs-1U-Eqi"/>
-                                    <constraint firstItem="0ir-Q9-gZ4" firstAttribute="centerX" secondItem="ObE-7r-VTI" secondAttribute="centerX" constant="-62" id="C0t-Gc-Z7o"/>
                                     <constraint firstAttribute="width" constant="340" id="EOU-EA-Qar"/>
+                                    <constraint firstItem="0ir-Q9-gZ4" firstAttribute="top" secondItem="ObE-7r-VTI" secondAttribute="top" id="H6Z-bx-doC"/>
                                     <constraint firstAttribute="trailing" secondItem="cx2-Bl-JDe" secondAttribute="trailing" constant="11" id="VQm-FW-vTA"/>
                                     <constraint firstAttribute="bottom" secondItem="v3c-Ag-h76" secondAttribute="bottom" constant="5" id="WWw-bF-9eE"/>
                                     <constraint firstAttribute="bottom" secondItem="cx2-Bl-JDe" secondAttribute="bottom" constant="6" id="YfG-Yb-INI"/>
                                     <constraint firstItem="cx2-Bl-JDe" firstAttribute="top" secondItem="ObE-7r-VTI" secondAttribute="top" constant="4" id="bKt-Jv-qlI"/>
-                                    <constraint firstItem="v3c-Ag-h76" firstAttribute="leading" secondItem="0ir-Q9-gZ4" secondAttribute="trailing" constant="8" id="bde-l3-ji4"/>
-                                    <constraint firstItem="0ir-Q9-gZ4" firstAttribute="centerY" secondItem="ObE-7r-VTI" secondAttribute="centerY" id="eAr-DI-zIQ"/>
+                                    <constraint firstItem="0ir-Q9-gZ4" firstAttribute="leading" secondItem="ObE-7r-VTI" secondAttribute="leading" constant="8" id="ib3-8N-WLo"/>
+                                    <constraint firstAttribute="bottom" secondItem="0ir-Q9-gZ4" secondAttribute="bottom" id="tsL-rp-EXd"/>
                                     <constraint firstAttribute="trailing" secondItem="v3c-Ag-h76" secondAttribute="trailing" constant="8" id="yTw-IE-xte"/>
                                 </constraints>
                             </view>
@@ -254,25 +254,25 @@
     </objects>
     <designables>
         <designable name="0ir-Q9-gZ4">
-            <size key="intrinsicContentSize" width="36" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="39.333333333333336" height="21.333333333333332"/>
         </designable>
         <designable name="3PY-qB-7mJ">
-            <size key="intrinsicContentSize" width="36" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="30.666666666666668" height="16.666666666666668"/>
         </designable>
         <designable name="5Zd-77-ahs">
             <size key="intrinsicContentSize" width="48" height="48"/>
         </designable>
         <designable name="cx2-Bl-JDe">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
         <designable name="jLp-rH-ZeA">
-            <size key="intrinsicContentSize" width="116" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="99.666666666666671" height="16.666666666666668"/>
         </designable>
         <designable name="rgH-vW-BiW">
             <size key="intrinsicContentSize" width="49" height="31"/>
         </designable>
         <designable name="v3c-Ag-h76">
-            <size key="intrinsicContentSize" width="49.666666666666664" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="40.333333333333336" height="16.666666666666668"/>
         </designable>
     </designables>
     <resources>
